k8s/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: guestbook-frontend
  ports:
    - protocol: TCP
      port: 80         # Ingress hits this
      targetPort: 3000  # THIS matches your Dockerfile EXPOSE 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook-frontend
  template:
    metadata:
      labels:
        app: guestbook-frontend
    spec:
      containers:
      - name: guestbook-frontend
        image: guestbook-frontend:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000 # Matches your 'serve -l 3000'
